# LiveCode

./: .gitignore  README.md  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml  npm-audit.yml
backend/: .env.example  Cargo.toml  Dockerfile  fly.toml
backend/.cargo/: audit.toml
backend/migrations/: 0001_create_documents.sql  0002_create_users.sql  0003_notes_service.sql
backend/src/: auth.rs  main.rs
backend/src/controllers/: documents.rs  hello.rs  mod.rs  notes.rs  users.rs  ws.rs
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  worker.js  wrangler.jsonc
frontend/public/: _headers
frontend/src/: App.css  App.jsx  index.css  main.jsx  main.tsx  routeTree.gen.ts  vite-env.d.ts
frontend/src/components/: FullInput.jsx
frontend/src/components/auth/: SocialSignInButtons.tsx
frontend/src/components/ws/: ConnectionStatusBadge.tsx  DocumentTitle.tsx  EditorErrorBoundary.tsx  EditorPane.tsx  PresenceBar.tsx  PreviewPane.tsx  ViewModeToggle.tsx
frontend/src/hooks/: useYjsEditor.ts
frontend/src/lib/: api.ts  auth-context.tsx  auth-errors.ts  firebase.ts  presence.ts
frontend/src/pages/: App.css  IDE.jsx  Pages.jsx
frontend/src/pages/Auth/: Login.css  Login.jsx  Register.jsx  firebase.js
frontend/src/routes/: __root.jsx  __root.tsx  doc.$id.tsx  index.jsx  index.tsx  login.tsx  signup.tsx  ws.jsx  ws.tsx
ysocket/: .env.example  Dockerfile  fly.toml  package-lock.json  package.json  server.js
